--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
     <header class="page-header">
+        <div class="container">
         <nav>
             <a href="#" class="gen-logo">Web<span class="logo2">Studio</span></a>
             <ul class="site-nav list">
@@ -29,6 +31,7 @@
             <li><a href="mailto:ihfo@devstudio" class="link">ihfo@devstudio </a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
 
     </header>
     <main>
