--- a/portfolio.html
+++ b/portfolio.html
@@ -36,83 +36,91 @@
     </header>
     <main>
         <!--  -->
-        <section>
-            <h2 hidden>Фильтр</h2>
-            <ul class="filter list">
-                <li><button type="button" class="link">Все</button></li>
-                <li><button type="button" class="link">Веб-сайты</button></li>
-                <li><button type="button" class="link">Приложения</button></li>
-                <li><button type="button" class="link">Дизайн</button></li>
-                <li><button type="button" class="link">Маркетинг</button></li>
-            </ul>
-            <ul class="items list">
-                <li>
-                    <img src="./images/website-laptop.jpg" alt="веб-сайт технокряк" width="370" height="294">
-                    <h3 class="item">Технокряк</h3>
-                    <p class="item-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/design-poster.jpg" alt="дизайн постер" width="370" height="294">
-                    <h3 class="item">Постер New Orlean vs Golden Star</h3>
-                    <p class="item-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/application-restaurant.jpg" alt="приложение ресторан" width="370" height="294">
-                    <h3 class="item">Ресторан Seafood</h3>
-                    <p class="item-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/marketing-prime.jpg" alt="маркетинг прайм" width="370" height="294">
-                    <h3 class="item">Проект Prime</h3>
-                    <p class="item-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/application-boxes.jpg" alt="приложение коробки" width="370" height="294">
-                    <h3 class="item">Проект Boxes</h3>
-                    <p class="item-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/website-inspiration.jpg" alt="веб-сайт вдохновение" width="370" height="294">
-                    <h3 class="item">Inspiration has no Borders</h3>
-                    <p class="item-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/design-limited.jpg" alt="дизайн издание" width="370" height="294">
-                    <h3 class="item">Издание Limited Edition</h3>
-                    <p class="item-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/marketing-lab.jpg" alt="маркетинг лаб" width="370" height="294">
-                    <h3 class="item">Проект LAB</h3>
-                    <p class="item-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/application-growing.jpg" alt="приложение бизнес" width="370" height="294">
-                    <h3 class="item">Growing Business</h3>
-                    <p class="item-text">Приложение</p>
-                </li>
-            </ul>
-        </section>
-        <!--/  -->
-    </main>
-    <footer>
-        <!-- contacts -->
-        <section class="details">
-            <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
-            <address>
-                <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
-                <ul class="detail list">
+        
+            <section>
+                <div class="container">
+                <h2 hidden>Фильтр</h2>
+                <ul class="filter list">
+                    <li><button type="button" class="link">Все</button></li>
+                    <li><button type="button" class="link">Веб-сайты</button></li>
+                    <li><button type="button" class="link">Приложения</button></li>
+                    <li><button type="button" class="link">Дизайн</button></li>
+                    <li><button type="button" class="link">Маркетинг</button></li>
+                </ul>
+                <ul class="items list">
                     <li>
-                        <a href="mailto:info@example.com" class="link">info@example.com</a>
+                        <img src="./images/website-laptop.jpg" alt="веб-сайт технокряк" width="370" height="294">
+                        <h3 class="item">Технокряк</h3>
+                        <p class="item-text">Веб-сайт</p>
                     </li>
                     <li>
-                        <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                        <img src="./images/design-poster.jpg" alt="дизайн постер" width="370" height="294">
+                        <h3 class="item">Постер New Orlean vs Golden Star</h3>
+                        <p class="item-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/application-restaurant.jpg" alt="приложение ресторан" width="370" height="294">
+                        <h3 class="item">Ресторан Seafood</h3>
+                        <p class="item-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/marketing-prime.jpg" alt="маркетинг прайм" width="370" height="294">
+                        <h3 class="item">Проект Prime</h3>
+                        <p class="item-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/application-boxes.jpg" alt="приложение коробки" width="370" height="294">
+                        <h3 class="item">Проект Boxes</h3>
+                        <p class="item-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/website-inspiration.jpg" alt="веб-сайт вдохновение" width="370" height="294">
+                        <h3 class="item">Inspiration has no Borders</h3>
+                        <p class="item-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/design-limited.jpg" alt="дизайн издание" width="370" height="294">
+                        <h3 class="item">Издание Limited Edition</h3>
+                        <p class="item-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/marketing-lab.jpg" alt="маркетинг лаб" width="370" height="294">
+                        <h3 class="item">Проект LAB</h3>
+                        <p class="item-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/application-growing.jpg" alt="приложение бизнес" width="370" height="294">
+                        <h3 class="item">Growing Business</h3>
+                        <p class="item-text">Приложение</p>
                     </li>
                 </ul>
-            </address>
-        </section>
-        <!-- /contacts -->
-    </footer>
+                </div>
+            </section>
+        
+        <!--/  -->
+    </main>
+   
+        <footer>
+            <!-- contacts -->
+            <section class="details">
+                <div class="container">
+                <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
+                <address>
+                    <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
+                    <ul class="detail list">
+                        <li>
+                            <a href="mailto:info@example.com" class="link">info@example.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </section>
+            </div>
+            <!-- /contacts -->
+        </footer>
+   
 </body>
 
 </html>
