--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,19 @@
 <body>
 
     <header class="page-header">
-        <div class="container">
-        <nav>
+        <div class="container main-nav">
+        <nav class="navigation">
             <a href="#" class="gen-logo">Web<span class="logo2">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link ">Студия</a></li>
-                <li><a href="#" class="link current">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
+                <li class="nav-item"><a href="./index.html" class="link ">Студия</a></li>
+                <li class="nav-item"><a href="#" class="link current">Портфолио</a></li>
+                <li class="nav-item"><a href="#" class="link">Контакты</a></li>
 
             </ul>
         </nav>
         <ul class="contacts list">
-            <li><a href="mailto:ihfo@devstudio" class="link">ihfo@devstudio </a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li class="contact-item"><a href="mailto:ihfo@devstudio" class="link">ihfo@devstudio </a></li>
+            <li class="contact-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
         </div>
 
@@ -37,15 +37,15 @@
     <main>
         <!--  -->
         
-            <section>
+            <section class="section">
                 <div class="container">
                 <h2 hidden>Фильтр</h2>
                 <ul class="filter list">
-                    <li><button type="button" class="link">Все</button></li>
-                    <li><button type="button" class="link">Веб-сайты</button></li>
-                    <li><button type="button" class="link">Приложения</button></li>
-                    <li><button type="button" class="link">Дизайн</button></li>
-                    <li><button type="button" class="link">Маркетинг</button></li>
+                    <li class="filter-btn"><button type="button" class="link">Все</button></li>
+                    <li class="filter-btn"><button type="button" class="link">Веб-сайты</button></li>
+                    <li class="filter-btn"><button type="button" class="link">Приложения</button></li>
+                    <li class="filter-btn"><button type="button" class="link">Дизайн</button></li>
+                    <li class="filter-btn"><button type="button" class="link">Маркетинг</button></li>
                 </ul>
                 <ul class="items list">
                     <li>
