--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 <h2 class="section-title">
                     Чем мы занимаемся
                 </h2>
-                <ul class="images list">
-                    <li><img src="./images/box1.jpg" alt="Структура" width="370" height="294">
+                <ul class="images-do list">
+                    <li class="image-do"><img src="./images/box1.jpg" alt="Структура" width="370" height="294">
                     </li>
-                    <li><img src="./images/box2.jpg" alt="Стили" width="370" height="294">
+                    <li class="image-do"><img src="./images/box2.jpg" alt="Стили" width="370" height="294">
                     </li>
-                    <li><img src="./images/box3.jpg" alt="Спектр" width="370" height="294">
+                    <li class="image-do"><img src="./images/box3.jpg" alt="Спектр" width="370" height="294">
                     </li>
                 </ul>
                 </div>
@@ -99,7 +99,7 @@
                         Наша команда
                     </h2>
                     <ul class="cadres list">
-                        <li>
+                        <li class="our-cadres">
                             <ul class="list">
                                 <li>
                                     <img src="./images/img1.jpg" alt="Демьяненко" width="270" height="260">
@@ -108,7 +108,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="our-cadres">
                             <ul class="list">
                                 <li>
                                     <img src="./images/img2.jpg" alt="Репина" width="270" height="260">
@@ -117,7 +117,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="our-cadres">
                             <ul class="list">
                                 <li>
                                     <img src="./images/img3.jpg" alt="Тарасов" width="270" height="260">
@@ -126,7 +126,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="our-cadres">
                             <ul class="list">
                                 <li>
                                     <img src="./images/img4.jpg" alt="Ермаков" width="270" height="260">
@@ -148,9 +148,9 @@
             
             <!-- contacts -->
             <section class="details">
-                <div class="container">
+                <div class="container main-footer">
                 <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
-                <address>
+                <address class="adress-footer">
                     <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
                     <ul class="detail list">
                         <li>
