--- a/portfolio.html
+++ b/portfolio.html
@@ -48,47 +48,47 @@
                     <li class="filter-btn"><button type="button" class="link">Маркетинг</button></li>
                 </ul>
                 <ul class="items list">
-                    <li>
+                    <li class="banners">
                         <img src="./images/website-laptop.jpg" alt="веб-сайт технокряк" width="370" height="294">
                         <h3 class="item">Технокряк</h3>
                         <p class="item-text">Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/design-poster.jpg" alt="дизайн постер" width="370" height="294">
                         <h3 class="item">Постер New Orlean vs Golden Star</h3>
                         <p class="item-text">Дизайн</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/application-restaurant.jpg" alt="приложение ресторан" width="370" height="294">
                         <h3 class="item">Ресторан Seafood</h3>
                         <p class="item-text">Приложение</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/marketing-prime.jpg" alt="маркетинг прайм" width="370" height="294">
                         <h3 class="item">Проект Prime</h3>
                         <p class="item-text">Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/application-boxes.jpg" alt="приложение коробки" width="370" height="294">
                         <h3 class="item">Проект Boxes</h3>
                         <p class="item-text">Приложение</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/website-inspiration.jpg" alt="веб-сайт вдохновение" width="370" height="294">
                         <h3 class="item">Inspiration has no Borders</h3>
                         <p class="item-text">Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/design-limited.jpg" alt="дизайн издание" width="370" height="294">
                         <h3 class="item">Издание Limited Edition</h3>
                         <p class="item-text">Дизайн</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/marketing-lab.jpg" alt="маркетинг лаб" width="370" height="294">
                         <h3 class="item">Проект LAB</h3>
                         <p class="item-text">Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="banners">
                         <img src="./images/application-growing.jpg" alt="приложение бизнес" width="370" height="294">
                         <h3 class="item">Growing Business</h3>
                         <p class="item-text">Приложение</p>
