--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 
     <header class="page-header">
         <div class="container main-nav ">
-            <nav class="navigation">              
+        <nav>
+            <div class="navigation">
             <a href="#" class="gen-logo">Web<span class="logo2">Studio</span></a>
-            
             <ul class="site-nav list">
                 <li class="nav-item"><a href="#" class="link current">Студия</a></li>
                 <li class="nav-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li class="nav-item"><a href="#" class="link">Контакты</a></li>
             </ul>
-            </nav>
+            </div>
+        </nav>
 
             <ul class="contacts list">
             <li class="contact-item"><a href="mailto:ihfo@devstudio" class="link">ihfo@devstudio </a></li>
             <li class="contact-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
-        
         </div>
     </header>
 
@@ -102,36 +102,59 @@
                         <li class="our-cadres">
                             <ul class="list">
                                 <li>
+                                    <article class="cadres-article">
+                                    <div class="cadres-thumb">
                                     <img src="./images/img1.jpg" alt="Демьяненко" width="270" height="260">
+                                 <div class="cadres-content">
                                     <h3 class="team-title">Игорь Демьяненко</h3>
                                     <p class="team-dsr">Product Designer</p>
+                                </div>
+                                </article>
                                 </li>
+
                             </ul>
                         </li>
                         <li class="our-cadres">
                             <ul class="list">
                                 <li>
+                            <article class="cadres-article">
+                                <div class="cadres-thumb">
                                     <img src="./images/img2.jpg" alt="Репина" width="270" height="260">
+                                 <div class="cadres-content">
                                     <h3 class="team-title">Ольга Репина</h3>
                                     <p class="team-dsr">Frontend Developer</p>
+                                </div>
+                                </article>
                                 </li>
+
                             </ul>
                         </li>
                         <li class="our-cadres">
                             <ul class="list">
                                 <li>
+                            <article class="cadres-article">
+                                <div class="cadres-thumb">
                                     <img src="./images/img3.jpg" alt="Тарасов" width="270" height="260">
+                                 <div class="cadres-content">
                                     <h3 class="team-title">Николай Тарасов</h3>
                                     <p class="team-dsr">Marketing</p>
+                                </div>
+                                </article>
                                 </li>
+
                             </ul>
                         </li>
                         <li class="our-cadres">
                             <ul class="list">
                                 <li>
+                            <article class="cadres-article">
+                                <div class="cadres-thumb">
                                     <img src="./images/img4.jpg" alt="Ермаков" width="270" height="260">
+                                   <div class="cadres-content">
                                     <h3 class="team-title">Михаил Ермаков</h3>
                                     <p class="team-dsr">UI Designer</p>
+                                </div>
+                            </article>
                                 </li>
                             </ul>
                         </li>
