--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,6 @@
             <li class="contact-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
         </div>
-
     </header>
     <main>
         <!--  -->
@@ -48,50 +47,112 @@
                     <li class="filter-btn"><button type="button" class="link">Маркетинг</button></li>
                 </ul>
                 <ul class="items list">
-                    <li class="banners">
-                        <img src="./images/website-laptop.jpg" alt="веб-сайт технокряк" width="370" height="294">
-                        <h3 class="item">Технокряк</h3>
-                        <p class="item-text">Веб-сайт</p>
+                    <li class="cards">
+                        <article class="card-article">
+                        <div class="card-thumb"> 
+                             <img src="./images/website-laptop.jpg" alt="веб-сайт технокряк" width="370" height="294">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="item">Технокряк</h3>
+                            <p class="item-text">Веб-сайт</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/design-poster.jpg" alt="дизайн постер" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                              <img src="./images/design-poster.jpg" alt="дизайн постер" width="370" height="294">
+                            </div>
+                        <div class="card-content">
                         <h3 class="item">Постер New Orlean vs Golden Star</h3>
                         <p class="item-text">Дизайн</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/application-restaurant.jpg" alt="приложение ресторан" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                               <img src="./images/application-restaurant.jpg" alt="приложение ресторан" width="370" height="294">
+                             </div>
+                        <div class="card-content">
                         <h3 class="item">Ресторан Seafood</h3>
                         <p class="item-text">Приложение</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/marketing-prime.jpg" alt="маркетинг прайм" width="370" height="294">
+                    
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                               <img src="./images/marketing-prime.jpg" alt="маркетинг прайм" width="370" height="294">
+                           </div>
+                        <div class="card-content">
                         <h3 class="item">Проект Prime</h3>
                         <p class="item-text">Маркетинг</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/application-boxes.jpg" alt="приложение коробки" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                             <img src="./images/application-boxes.jpg" alt="приложение коробки" width="370" height="294">
+                          </div>
+                        <div class="card-content">
                         <h3 class="item">Проект Boxes</h3>
                         <p class="item-text">Приложение</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/website-inspiration.jpg" alt="веб-сайт вдохновение" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                            <img src="./images/website-inspiration.jpg" alt="веб-сайт вдохновение" width="370" height="294">
+                           </div>
+                        <div class="card-content">
                         <h3 class="item">Inspiration has no Borders</h3>
                         <p class="item-text">Веб-сайт</p>
+                       </div>
+                       </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/design-limited.jpg" alt="дизайн издание" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                              <img src="./images/design-limited.jpg" alt="дизайн издание" width="370" height="294">
+                           </div>
+                        <div class="card-content">
                         <h3 class="item">Издание Limited Edition</h3>
                         <p class="item-text">Дизайн</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/marketing-lab.jpg" alt="маркетинг лаб" width="370" height="294">
+
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                              <img src="./images/marketing-lab.jpg" alt="маркетинг лаб" width="370" height="294">
+                           </div>
+                        <div class="card-content">
                         <h3 class="item">Проект LAB</h3>
                         <p class="item-text">Маркетинг</p>
+                        </div>
+                        </article>
                     </li>
-                    <li class="banners">
-                        <img src="./images/application-growing.jpg" alt="приложение бизнес" width="370" height="294">
+                    
+                    <li class="cards">
+                        <article class="card-article">
+                            <div class="card-thumb">
+                             <img src="./images/application-growing.jpg" alt="приложение бизнес" width="370" height="294">
+                           </div>
+                        <div class="card-content">
                         <h3 class="item">Growing Business</h3>
                         <p class="item-text">Приложение</p>
+                        </div>
+                        </article>
                     </li>
                 </ul>
                 </div>
@@ -103,19 +164,20 @@
         <footer>
             <!-- contacts -->
             <section class="details">
-                <div class="container">
-                <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
-                <address>
-                    <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
-                    <ul class="detail list">
-                        <li>
-                            <a href="mailto:info@example.com" class="link">info@example.com</a>
-                        </li>
-                        <li>
-                            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
-                        </li>
-                    </ul>
-                </address>
+                <div class="container main-footer">
+                    <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
+                    <address class="adress-footer">
+                        <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
+                        <ul class="detail list">
+                            <li>
+                                <a href="mailto:info@example.com" class="link">info@example.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
             </section>
             </div>
             <!-- /contacts -->
