--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
                         <li class="our-cadres">
                             <ul class="list">
                                 <li>
-                                    <article class="cadres-article">
+                                <article class="cadres-article">
                                     <div class="cadres-thumb">
                                     <img src="./images/img1.jpg" alt="Демьяненко" width="270" height="260">
-                                 <div class="cadres-content">
+                                    </div>
+                                    <div class="cadres-content">
                                     <h3 class="team-title">Игорь Демьяненко</h3>
                                     <p class="team-dsr">Product Designer</p>
                                 </div>
@@ -120,7 +121,8 @@
                             <article class="cadres-article">
                                 <div class="cadres-thumb">
                                     <img src="./images/img2.jpg" alt="Репина" width="270" height="260">
-                                 <div class="cadres-content">
+                                </div>
+                                    <div class="cadres-content">
                                     <h3 class="team-title">Ольга Репина</h3>
                                     <p class="team-dsr">Frontend Developer</p>
                                 </div>
@@ -135,7 +137,8 @@
                             <article class="cadres-article">
                                 <div class="cadres-thumb">
                                     <img src="./images/img3.jpg" alt="Тарасов" width="270" height="260">
-                                 <div class="cadres-content">
+                                </div>
+                                    <div class="cadres-content">
                                     <h3 class="team-title">Николай Тарасов</h3>
                                     <p class="team-dsr">Marketing</p>
                                 </div>
@@ -150,7 +153,8 @@
                             <article class="cadres-article">
                                 <div class="cadres-thumb">
                                     <img src="./images/img4.jpg" alt="Ермаков" width="270" height="260">
-                                   <div class="cadres-content">
+                                </div>
+                                    <div class="cadres-content">
                                     <h3 class="team-title">Михаил Ермаков</h3>
                                     <p class="team-dsr">UI Designer</p>
                                 </div>
