--- a/index.html
+++ b/index.html
@@ -100,9 +100,6 @@
                     </h2>
                     <ul class="cadres list">
                         <li class="our-cadres">
-                            <ul class="list">
-                                <li>
-                                <article class="cadres-article">
                                     <div class="cadres-thumb">
                                     <img src="./images/img1.jpg" alt="Демьяненко" width="270" height="260">
                                     </div>
@@ -110,58 +107,37 @@
                                     <h3 class="team-title">Игорь Демьяненко</h3>
                                     <p class="team-dsr">Product Designer</p>
                                 </div>
-                                </article>
                                 </li>
 
-                            </ul>
-                        </li>
                         <li class="our-cadres">
-                            <ul class="list">
-                                <li>
-                            <article class="cadres-article">
-                                <div class="cadres-thumb">
+                                    <div class="cadres-thumb">
                                     <img src="./images/img2.jpg" alt="Репина" width="270" height="260">
                                 </div>
                                     <div class="cadres-content">
                                     <h3 class="team-title">Ольга Репина</h3>
                                     <p class="team-dsr">Frontend Developer</p>
                                 </div>
-                                </article>
                                 </li>
 
-                            </ul>
-                        </li>
                         <li class="our-cadres">
-                            <ul class="list">
-                                <li>
-                            <article class="cadres-article">
-                                <div class="cadres-thumb">
+                                    <div class="cadres-thumb">
                                     <img src="./images/img3.jpg" alt="Тарасов" width="270" height="260">
                                 </div>
                                     <div class="cadres-content">
                                     <h3 class="team-title">Николай Тарасов</h3>
                                     <p class="team-dsr">Marketing</p>
                                 </div>
-                                </article>
                                 </li>
-
-                            </ul>
-                        </li>
+                                
                         <li class="our-cadres">
-                            <ul class="list">
-                                <li>
-                            <article class="cadres-article">
-                                <div class="cadres-thumb">
+                                    <div class="cadres-thumb">
                                     <img src="./images/img4.jpg" alt="Ермаков" width="270" height="260">
                                 </div>
                                     <div class="cadres-content">
                                     <h3 class="team-title">Михаил Ермаков</h3>
                                     <p class="team-dsr">UI Designer</p>
                                 </div>
-                            </article>
                                 </li>
-                            </ul>
-                        </li>
                     </ul>
                     </div>
                 </section>
@@ -177,7 +153,7 @@
             <section class="details">
                 <div class="container main-footer">
                 <a href="#" class="gen-logo">Web<span class="logo3">Studio</span></a>
-                <address class="adress-footer">
+                <address class="address-footer">
                     <p class="address"> г.Киев, пр-т Леси Украинки,26</p>
                     <ul class="detail list">
                         <li>
